@@ -1,5 +1,11 @@
 2008-11-05  kitone  <kitone@gna.org>
 
+	* src/formats/AdvancedSubStationAlpha.h:
+	Fix: bug #12566
+	Alpha channel support for ASS. (patch by Khalahan)
+
+2008-11-05  kitone  <kitone@gna.org>
+
 	* plugins/actions/preferences/ExtensionPage.h:
 	* plugins/actions/preferences/Makefile.am:
 	* plugins/actions/preferences/PreferencesPlugin.cc:
